[gd_scene load_steps=18 format=3 uid="uid://txm7jkrfduva"]

[ext_resource type="PackedScene" uid="uid://dq34wi4msb7e3" path="res://enemy/enemy.tscn" id="1_ql086"]
[ext_resource type="Script" path="res://enemy/pink_enemy.gd" id="2_13e7t"]
[ext_resource type="Texture2D" uid="uid://dxguoy4qlyyop" path="res://assets/pink_enemy.png" id="2_ikub2"]
[ext_resource type="Script" path="res://components/state_component.gd" id="4_bj0ul"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="4_e6kxq"]
[ext_resource type="Script" path="res://components/move_component.gd" id="5_710b3"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="6_gmnl0"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="8_ryftl"]
[ext_resource type="PackedScene" uid="uid://co5gt2liksh4l" path="res://enemy/pink_projectile.tscn" id="9_dhp41"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4pwla"]
atlas = ExtResource("2_ikub2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdvek"]
atlas = ExtResource("2_ikub2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfhqh"]
atlas = ExtResource("2_ikub2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_levwh"]
atlas = ExtResource("2_ikub2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fngnj"]
atlas = ExtResource("2_ikub2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohdsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pwla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdvek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfhqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_levwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fngnj")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_iima3"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_lrv0c"]
radius = 6.0

[node name="PinkEnemy" instance=ExtResource("1_ql086")]
script = ExtResource("2_13e7t")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_ohdsy")
autoplay = "default"
frame = 1
frame_progress = 0.0728715

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
position = Vector2(-4.76837e-07, -1)
scale = Vector2(0.6, 0.5)

[node name="StatsComponent" parent="." index="5"]
health = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_iima3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_lrv0c")

[node name="DestroyedComponent" parent="." index="11" node_paths=PackedStringArray("item_spawn")]
item_spawn = NodePath("../ItemSpawner")

[node name="ScoreComponent" parent="." index="12"]
adjust_amount = 20

[node name="States" type="Node" parent="." index="13"]

[node name="MoveDownState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("4_e6kxq")
duration = 2.0

[node name="MoveDownComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("5_710b3")
actor = NodePath("../../..")
velocity = Vector2(0, 20)

[node name="MoveSideState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("4_e6kxq")
duration = 2.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("5_710b3")
actor = NodePath("../../..")

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("6_gmnl0")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="FireState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("4_bj0ul")

[node name="FireSpawner" type="Node2D" parent="States/FireState" index="0"]
unique_name_in_owner = true
script = ExtResource("8_ryftl")
scene = ExtResource("9_dhp41")

[node name="PauseState" type="Node" parent="States" index="3"]
unique_name_in_owner = true
script = ExtResource("4_e6kxq")
duration = 2.0

[node name="ItemSpawner" type="Node2D" parent="." index="15"]
script = ExtResource("8_ryftl")
